[package]
name = "dusklight-huntctl"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Control plane for deterministic Dusklight glitch-hunting workers"

[features]
default = []
experimental-interventions = ["dusklight-interventions/experimental-interventions"]

[dependencies]
dusklight-automation-contracts = { path = "crates/contracts" }
dusklight-control = { path = "crates/control" }
dusklight-evidence = { path = "crates/evidence" }
dusklight-harness-contracts = { path = "crates/harness-contracts" }
dusklight-interventions = { path = "crates/interventions" }
dusklight-learning = { path = "crates/learning" }
dusklight-objectives = { path = "crates/objectives" }
dusklight-oracles = { path = "crates/oracles" }
dusklight-routes = { path = "crates/routes" }
dusklight-search = { path = "crates/search" }
dusklight-semantic-novelty = { path = "crates/semantic-novelty" }
dusklight-trace = { path = "crates/trace" }
dusklight-worker-protocol = { path = "crates/worker" }
dusklight-world = { path = "crates/world" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zstd = "0.13"
arrow-array = "56"
arrow-schema = "56"
arrow-ipc = "56"

[lib]
name = "huntctl"
path = "src/lib.rs"

[[bin]]
name = "huntctl"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1

[workspace]
members = [
    ".",
    "crates/contracts",
    "crates/control",
    "crates/evidence",
    "crates/harness-contracts",
    "crates/interventions",
    "crates/learning",
    "crates/objectives",
    "crates/oracles",
    "crates/routes",
    "crates/search",
    "crates/semantic-novelty",
    "crates/trace",
    "crates/worker",
    "crates/world",
]
default-members = [
    ".",
    "crates/contracts",
    "crates/control",
    "crates/evidence",
    "crates/harness-contracts",
    "crates/interventions",
    "crates/learning",
    "crates/objectives",
    "crates/oracles",
    "crates/routes",
    "crates/search",
    "crates/semantic-novelty",
    "crates/trace",
    "crates/worker",
    "crates/world",
]
resolver = "3"
