[package]
name = "dusklight-bounded-search"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Bounded native-ranked search policies for Dusklight candidates"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-evaluation = { path = "../evaluation" }
dusklight-learning = { path = "../learning" }
dusklight-search = { path = "../search" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
