[package]
name = "dusklight-control"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Dusklight input authoring, typed options, and controller realization"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
