[package]
name = "dusklight-evaluation-plan"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Deterministic prelaunch trial scheduling contracts for Dusklight evaluation"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
