[package]
name = "dusklight-evidence"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Immutable episode, corpus, and content-addressed Dusklight evidence"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zstd = "0.13"
