[package]
name = "dusklight-finalist-reduction"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Exact bounded finalist reduction over authenticated Dusklight evaluation"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-control = { path = "../control" }
dusklight-evaluation = { path = "../evaluation" }
dusklight-search = { path = "../search" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
