[package]
name = "dusklight-harness-contracts"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Versioned Dusklight objective suites, observation admission, and run contracts"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-control = { path = "../control" }
dusklight-objectives = { path = "../objectives" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
