[package]
name = "dusklight-harness-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Authenticated native execution and inspection for Dusklight harness requests"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-control = { path = "../control" }
dusklight-harness-contracts = { path = "../harness-contracts" }
dusklight-objectives = { path = "../objectives" }
dusklight-trace = { path = "../trace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
