[package]
name = "dusklight-interventions"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Typed, explicitly gated intervention artifacts and evidence for Dusklight"

[features]
default = []
experimental-interventions = []

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
