[package]
name = "dusklight-objectives"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Bounded Dusklight objective language, bytecode, and trace evaluation"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-trace = { path = "../trace" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
