[package]
name = "dusklight-oracles"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Dusklight semantic and comparison oracle contracts and evaluation"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-trace = { path = "../trace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
