[package]
name = "dusklight-orchestration"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Native execution, evaluation, campaigns, and proposal orchestration for Dusklight"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-control = { path = "../control" }
dusklight-evidence = { path = "../evidence" }
dusklight-harness-contracts = { path = "../harness-contracts" }
dusklight-harness-runtime = { path = "../harness-runtime" }
dusklight-learning = { path = "../learning" }
dusklight-objectives = { path = "../objectives" }
dusklight-proposals = { path = "../proposals" }
dusklight-search = { path = "../search" }
dusklight-semantic-novelty = { path = "../semantic-novelty" }
dusklight-trace = { path = "../trace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
