[package]
name = "dusklight-proposer-tournament"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Equal-budget authenticated proposer tournaments for Dusklight"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-evaluation = { path = "../evaluation" }
dusklight-harness-contracts = { path = "../harness-contracts" }
dusklight-learning = { path = "../learning" }
dusklight-search = { path = "../search" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
