[package]
name = "dusklight-search"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Bounded Dusklight candidate, ranking, and optimizer primitives"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-control = { path = "../control" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
