[package]
name = "dusklight-semantic-novelty"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Portable semantic novelty descriptors and discovery policy for Dusklight"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-trace = { path = "../trace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
