[package]
name = "dusklight-skybook-benchmark"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Revision-bound Skybook imports and bounded Dusklight benchmark pilots"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
