[package]
name = "dusklight-throughput-benchmark"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Authenticated cold-process throughput measurement for Dusklight harness runs"

[dependencies]
dusklight-harness-contracts = { path = "../harness-contracts" }
dusklight-harness-runtime = { path = "../harness-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
