[package]
name = "dusklight-route-workbench"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Interactive route editing, playback, and recording for Dusklight"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
dusklight-control = { path = "../control" }
dusklight-evidence = { path = "../evidence" }
dusklight-harness-contracts = { path = "../harness-contracts" }
dusklight-objectives = { path = "../objectives" }
dusklight-orchestration = { path = "../orchestration" }
dusklight-routes = { path = "../routes" }
dusklight-search = { path = "../search" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
