[package]
name = "dusklight-world"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Read-only Dusklight world geometry, inventory, and spatial queries"

[dependencies]
dusklight-automation-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
