[package]
name = "dusklight-route-planner"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Version-scoped causal route planning contracts for Twilight Princess"

[dependencies]
dusklight-automation-contracts = { path = "../../../huntctl/crates/contracts" }
dusklight-evidence = { path = "../../../huntctl/crates/evidence" }
dusklight-world = { path = "../../../huntctl/crates/world" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
